--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="google-site-verification" content="mnmC5PS4lYmcLw-1vwb80J6D3rb3r5V0vBiByU0r0yc" />
   <meta name="description" content="Professional house cleaning in Wallingford, North Haven & Cheshire, CT. Family-owned, fully insured & bonded. Deep cleaning, recurring service, move-in/out cleaning & more." />
- 
+  <meta name="robots" content="index,follow,max-image-preview:large" />
+
+  
   <meta property="og:title" content="House Cleaning in Wallingford, North Haven & Cheshire, CT | NeatNest LLC" />
   <meta property="og:description" content="Professional house cleaning services in Wallingford, North Haven & Cheshire, CT. Family-owned, fully insured & bonded cleaning company." />
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
   <meta property="og:url" content="https://neatnestllc.com/" />
   <meta property="og:type" content="website" />
-  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="House Cleaning in Wallingford, North Haven & Cheshire, CT | NeatNest LLC" />
+  <meta name="twitter:description" content="Family-owned, fully insured & bonded cleaning company serving Wallingford, North Haven & Cheshire." />
+  <meta name="twitter:image" content="https://neatnestllc.com/images/OG_logo.png" />
+
   <title>House Cleaning in Wallingford, North Haven & Cheshire, CT | NeatNest LLC</title>
   <link rel="icon" href="images/favicon32.png" type="image/png">
   
@@ -20,7 +26,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;700&family=Nunito:wght@400;600;700&family=Quicksand:wght@500;700&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;700&family=Nunito:wght@400;600;700&family=Quicksand:wght@500;700&display=swap" media="print" onload="this.media='all'">
+   <noscript>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;700&family=Nunito:wght@400;600;700&family=Quicksand:wght@500;700&display=swap">
+  </noscript>
 
+  
   <link rel="stylesheet" href="style.css" />
   <link rel="canonical" href="https://neatnestllc.com/" />
   
@@ -28,44 +38,51 @@
 
 <script type="application/ld+json">
 {
-  "@context":"https://schema.org",
-  "@type":"CleaningService",
-  "@id":"https://neatnestllc.com/#cleaningservice",
-  "name":"NeatNest LLC",
-  "url":"https://neatnestllc.com/",
-  "image":"https://neatnestllc.com/images/logo.jpg",
-  "telephone":"+1-203-500-7034",
-  "email":"info@neatnestllc.com",
-  "priceRange":"$$",
-  "address":{
-    "@type":"PostalAddress",
-    "streetAddress":"", 
-    "addressLocality":"Wallingford",
-    "addressRegion":"CT",
-    "postalCode":"",
-    "addressCountry":"US"
+  "@context": "https://schema.org",
+  "@type": ["LocalBusiness", "ProfessionalService"],
+  "@id": "https://neatnestllc.com/#localbusiness",
+  "name": "NeatNest LLC",
+  "description": "Family-owned, fully insured & bonded house cleaning company serving Wallingford, North Haven & Cheshire, CT.",
+  "url": "https://neatnestllc.com/",
+  "image": "https://neatnestllc.com/images/logo.jpg",
+  "logo": "https://neatnestllc.com/images/logo.jpg",
+  "telephone": "+1-203-500-7034",
+  "email": "info@neatnestllc.com",
+  "priceRange": "$$",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "274 Woodhouse Ave",
+    "addressLocality": "Wallingford",
+    "addressRegion": "CT",
+    "postalCode": "06492",
+    "addressCountry": "US"
   },
-  "geo":{
-    "@type":"GeoCoordinates",
+  "geo": {
+    "@type": "GeoCoordinates",
     "latitude": 41.45,
     "longitude": -72.82
   },
-  "hasMap":"https://maps.app.goo.gl/YP8Fn2mmzQTBQ2F69",
-  "areaServed":[
-    { "@type":"City", "name":"Wallingford, CT" },
-    { "@type":"City", "name":"North Haven, CT" },
-    { "@type":"City", "name":"Cheshire, CT" }
+  "hasMap": "https://www.google.com/maps/place/NeatNest+LLC/@41.4377754,-72.8044779,17z/data=!3m1!4b1!4m6!3m5!1s0x7acd96b0a1a0cd7:0x69a2bc28aca585cb!8m2!3d41.4377754!4d-72.8044779!16s%2Fg%2F11s5ytmvf9!5m1!1e4",
+  "areaServed": [
+    { "@type": "City", "name": "Wallingford" },
+    { "@type": "City", "name": "North Haven" },
+    { "@type": "City", "name": "Cheshire" }
   ],
-  "openingHoursSpecification":[
-    { "@type":"OpeningHoursSpecification", "dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"], "opens":"07:00", "closes":"20:00" }
+  "openingHoursSpecification": [
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+      "opens": "07:00",
+      "closes": "20:00"
+    }
   ],
-  "sameAs":[
+  "sameAs": [
     "https://www.facebook.com/neatnestct",
-    "https://www.instagram.com/neatnestct",
-    "https://maps.app.goo.gl/YP8Fn2mmzQTBQ2F69"
+    "https://www.instagram.com/neatnestct"
   ]
 }
 </script>
+
 
   <style>
     /* Navigation Bar Styles */
@@ -605,10 +622,10 @@
   <!-- Hero Section -->
   <header class="site-header">
     <div class="social-links">
-      <a href="https://www.facebook.com/neatnestct" target="_blank" aria-label="Facebook">
+      <a href="https://www.facebook.com/neatnestct" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
         <img src="images/facebook.svg" alt="Facebook logo" />
       </a>
-      <a href="https://www.instagram.com/neatnestct" target="_blank" aria-label="Instagram">
+      <a href="https://www.instagram.com/neatnestct" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
         <img src="images/Instagram.svg" alt="Instagram logo" />
       </a>
       <a href="https://maps.app.goo.gl/YP8Fn2mmzQTBQ2F69" target="_blank" rel="noopener noreferrer" aria-label="Google Business Profile">
