--- a/contact.html
+++ b/contact.html
@@ -72,6 +72,7 @@
 
     <ul class="nav-menu" id="navMenu">
       <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
       
       <li class="nav-dropdown">
         <span class="nav-dropdown-toggle">Services</span>
