--- a/wallingford-ct-house-cleaning.html
+++ b/wallingford-ct-house-cleaning.html
@@ -71,6 +71,7 @@
 
     <ul class="nav-menu" id="navMenu">
       <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
       
       <li class="nav-dropdown">
         <span class="nav-dropdown-toggle">Services</span>
